--- a/resources/css/_text.scss
+++ b/resources/css/_text.scss
@@ -5,7 +5,7 @@
     font-weight: 3000;
 }
 .sg{
-    color: #cf28b9;
+    color: #000000;
     font-size: 58px;
 }
 
@@ -35,4 +35,10 @@ h6 {
 
 h1, h2, h3, h4, h5, h6 {
 	font-weight: 500;
+}
+.text-base{
+    font-size: 22px;
+    color: #FFD700;
+    // cursor: pointer;
+
 }
