--- a/resources/css/_card.scss
+++ b/resources/css/_card.scss
@@ -1,10 +1,42 @@
 .card {
-    border: 1px solid hsla(0, 0%, 90%, .8);
+    border: 100px solid hsla(0, 0%, 90%, .8);
     border-radius: .5rem;
     --tw-bg-opacity: 1;
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-    padding: 1rem;
+    padding: 5rem;
     --tw-shadow: 0 4px 6px -1px rgba(0,0,0,.1), 0 2px 4px -2px rgba(0,0,0,.1);
     --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.overflow-auto {
+    overflow: auto !important;
+  }
+
+  .overflow-auto {
+    overflow: auto;
+  }
+  .items-center {
+    align-items: center;
+  }
+  .flex {
+    display: flex;
+  }
+//StatsDisplay
+.card1 {
+    @apply bg-gray-900 p-6 rounded-lg flex items-center justify-center w-64 h-24;
+  }
+
+  .icon {
+    @apply w-12 h-12;
+  }
+
+  .text-left {
+    @apply flex flex-col;
+
+  }
+  @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+
+  body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+  }
