--- a/resources/css/_button.scss
+++ b/resources/css/_button.scss
@@ -105,4 +105,11 @@
     color: #000000;
 }
 
+.bt-color .v-row{
+    background-color: white;
+}
+.bt-color .v-container{
+    background-color: white;
+
+}
 
