--- a/resources/css/_form.scss
+++ b/resources/css/_form.scss
@@ -11,3 +11,18 @@
     cursor: pointer;
     color: #ff5722;
   }
+.border-box .v-field__field ,.v-field__input{
+
+    border-radius: 35px;
+    background-color: #2c2c2c;
+}
+.border-box .v-field{
+    border-radius: 35px;
+}
+
+.border2-box .v-field__field{
+    background-color: #2c2c2c;
+}
+.border-box .v-text-field--outlined {
+    border-color: rgba(192, 0, 250, 0.986);
+  }
