--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
 .custom-button {
     @apply px-4 py-2 font-bold text-white bg-blue-500 rounded;
   }
