--- a/resources/css/_color.scss
+++ b/resources/css/_color.scss
@@ -1,5 +1,8 @@
+$color-main:#ffd700;
+$color-dark:#000000;
+
 $primary: #3D90D1;
-$info: #30384C;
+$info: #2c2c2c;
 $info2: #5FA2FF;
 $success: #6B904D;
 $warning: #FFAB3B;
@@ -20,3 +23,21 @@ $tab-active: #004086;
 $headline-bg: #FB5135;
 $main-bg: #E3E8EB;
 
+
+
+.color-main{
+    background: $color-main !important;
+}
+
+.color-dark{
+    background: $color-dark !important;
+    color: #ffd700 !important;
+}
+
+.color-info{
+    background: $info !important;
+}
+
+// .container{
+//     background-color: #2c2c2c;
+// }
