--- a/resources/css/Homepage/_maintablehome.scss
+++ b/resources/css/Homepage/_maintablehome.scss
@@ -5,9 +5,7 @@
     color: #737373;
     font-size: 40px;
 }
-.main-table-content{
 
-}
 .text-main-table-name{
     background-color: #444;
     border-radius: 30px 0px 0px 0px;
@@ -18,4 +16,10 @@
 .text-main-table-total{
     background-color: #444;
     border-radius: 0px 30px 0px 0px;
+}
+.main-table-hp{
+    background: #2c2c2c !important;
+    color: white !important;
+
+
 }
