--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -5,3 +5,10 @@
 @import "variables";
 @import "typography";
 @import "color";
+@import "_input";
+@import "_card";
+@import "_button";
+@import "_background";
+@import "_chip";
+@import "_table";
+
