--- a/resources/scss/_typography.scss
+++ b/resources/scss/_typography.scss
@@ -37,3 +37,22 @@ p {
   font-size: 15px;
   font-family: "Prompt";
 }
+.text-navbar {
+  background-color: #000000 !important ;
+  margin-left: 30px !important;
+  // margin-right: 20px !important;
+  color: #ffd700 !important;
+  margin-top: 8px !important;
+  font-size: 15px;
+}
+.main-text-toolbar {
+  display: flex !important;
+}
+
+.test-text {
+  justify-content: space-evenly;
+}
+.text-footer{
+  color: #FFD700;
+
+}
