--- a/resources/scss/_typography.scss
+++ b/resources/scss/_typography.scss
@@ -30,23 +30,23 @@ p {
 }
 
 .text-navbar {
-  background-color: #000000 !important ;
-  margin-left: 30px !important;
-  color: $color-primary;
-  margin-top: 8px !important;
+  color: $white;
   font-size: 15px;
   font-family: "Prompt";
 }
-.text-navbar {
-  background-color: #000000 !important ;
-  margin-left: 30px !important;
-  // margin-right: 20px !important;
-  color: #ffd700 !important;
-  margin-top: 8px !important;
-  font-size: 15px;
-}
+// .text-navbar {
+//   background-color: $color-secondary !important ;
+//   color: #ffd700 !important;
+//   font-size: 15px;
+// }
 .main-text-toolbar {
+  border-radius: 35px;
+  height: 50px;
+  width: 700px;
   display: flex !important;
+  background-color: rgba(255, 255, 255, 0.1);
+  // box-shadow: rgb(114, 114, 114) 0px 0px 10px 0px ;
+  // background-color: $color-secondary;
 }
 
 .test-text {
