--- a/resources/scss/_input.scss
+++ b/resources/scss/_input.scss
@@ -1,72 +1,77 @@
-
+.input-rounded {
+  @apply rounded-full text-black border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500;
+  color: black;
+}
 
 select {
-	&.form-control {
-		background: transparent;
-		background-repeat: no-repeat;
-		background-position-x: 100%;
-		background-position-y: 14px;
+  &.form-control {
+    background: transparent;
+    background-repeat: no-repeat;
+    background-position-x: 100%;
+    background-position-y: 14px;
 
-		option {
-			color: $text-base;
+    option {
+      color: $text-base;
 
-			&:disabled {
-				color: $placeholder;
-			}
-		}
+      &:disabled {
+        color: $placeholder;
+      }
+    }
 
-		&:disabled {
-			background: none;
-		}
-	}
+    &:disabled {
+      background: none;
+    }
+  }
 }
-
 
 .form-group {
-	display: grid;
+  display: grid;
 
-	&.form-inline {
-		display: flex;
-		align-items: center;
-	}
+  &.form-inline {
+    display: flex;
+    align-items: center;
+  }
 
-	label {
-		&:not(.v-label) {
-			margin-bottom: 5px;
-		}
+  label {
+    &:not(.v-label) {
+      margin-bottom: 5px;
+    }
 
-		&.required {
-			&::after {
-				content: " *";
-				color: red;
-			}
-		}
-	}
-    .form-control {
-		margin-bottom: 10px;
+    &.required {
+      &::after {
+        content: " *";
+        color: red;
+      }
+    }
+  }
+  .form-control {
+    margin-bottom: 10px;
 
-		&.form-control-search {
-			width: 100%;
-			margin-bottom: 0;
-			border: none;
-		}
-	}
+    &.form-control-search {
+      width: 100%;
+      margin-bottom: 0;
+      border: none;
+    }
+  }
 }
 .form-control {
-	border-bottom: 1px solid $placeholder;
-	padding: 8px 12px;
-	cursor: pointer;
+  border-bottom: 1px solid $placeholder;
+  padding: 8px 12px;
+  cursor: pointer;
 
-	&:focus, &:hover, &:active, &:focus-visible {
-		border-bottom: 1px solid $text-base;
-		outline: none;
-	}
+  &:focus,
+  &:hover,
+  &:active,
+  &:focus-visible {
+    border-bottom: 1px solid $text-base;
+    outline: none;
+  }
 
-	&:disabled {
-		color: $placeholder;
-		border: none;
-		cursor: default;
-	}
+  &:disabled {
+    color: $placeholder;
+    border: none;
+    cursor: default;
+  }
 }
 
 .form-control {
@@ -83,20 +88,19 @@ select {
   color: #ff5722;
 }
 
-
-.border2-box .v-field__field{
+.border2-box .v-field__field {
   background-color: #2c2c2c;
 }
 .border-box .v-text-field--outlined {
   border-color: rgba(192, 0, 250, 0.986);
 }
 
-.text-input-footer{
+.text-input-footer {
   background-color: #252525;
-  border-radius: 30px ;
-
+  border-radius: 30px;
 }
-.input-footer{
+
+.input-footer {
   // width: 25%;
   padding: 2px;
   background-color: #252525;
