--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -2,7 +2,7 @@ $black: #000000;
 $white: #fff;
 
 $color-primary: #ffd700;
-$color-secondary: #252525;
+$color-secondary: #27272a;
 
 $primary: #3d90d1;
 $info: #2c2c2c;
@@ -24,68 +24,3 @@ $switch-active: #0e54a2;
 $tab-active: #004086;
 $headline-bg: #fb5135;
 $main-bg: #e3e8eb;
-
-@font-face {
-  font-family: "Prompt";
-  src: url("./../../public/fonts/Prompt/Prompt-ExtraLight.ttf")
-    format("truetype");
-  font-weight: 100;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Prompt";
-  src: url("./../../public/fonts/Prompt/Prompt-Thin.ttf") format("truetype");
-  font-weight: 200;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Prompt";
-  src: url("./../../public/fonts/Prompt/Prompt-Light.ttf") format("truetype");
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Prompt";
-  src: url("./../../public/fonts/Prompt/Prompt-Regular.ttf") format("truetype");
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Prompt";
-  src: url("./../../public/fonts/Prompt/Prompt-Medium.ttf") format("truetype");
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Prompt";
-  src: url("./../../public/fonts/Prompt/Prompt-SemiBold.ttf") format("truetype");
-  font-weight: 600;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Prompt";
-  src: url("./../../public/fonts/Prompt/Prompt-Bold.ttf") format("truetype");
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Prompt";
-  src: url("./../../public/fonts/Prompt/Prompt-ExtraBold.ttf")
-    format("truetype");
-  font-weight: 800;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Prompt";
-  src: url("./../../public/fonts/Prompt/Prompt-Black.ttf") format("truetype");
-  font-weight: 900;
-  font-style: normal;
-}
