--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,6 +1,82 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer base {
+  @font-face {
+    font-family: "Prompt";
+    src: url("./../../public/fonts/Prompt/Prompt-ExtraLight.ttf")
+      format("truetype");
+    font-weight: 100;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: "Prompt";
+    src: url("./../../public/fonts/Prompt/Prompt-Thin.ttf") format("truetype");
+    font-weight: 200;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: "Prompt";
+    src: url("./../../public/fonts/Prompt/Prompt-Light.ttf") format("truetype");
+    font-weight: 300;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: "Prompt";
+    src: url("./../../public/fonts/Prompt/Prompt-Regular.ttf")
+      format("truetype");
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: "Prompt";
+    src: url("./../../public/fonts/Prompt/Prompt-Medium.ttf") format("truetype");
+    font-weight: 500;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: "Prompt";
+    src: url("./../../public/fonts/Prompt/Prompt-SemiBold.ttf")
+      format("truetype");
+    font-weight: 600;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: "Prompt";
+    src: url("./../../public/fonts/Prompt/Prompt-Bold.ttf") format("truetype");
+    font-weight: 700;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: "Prompt";
+    src: url("./../../public/fonts/Prompt/Prompt-ExtraBold.ttf")
+      format("truetype");
+    font-weight: 800;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: "Prompt";
+    src: url("./../../public/fonts/Prompt/Prompt-Black.ttf") format("truetype");
+    font-weight: 900;
+    font-style: normal;
+  }
+}
+
+html {
+  font-size: 18px;
+}
+
+body {
+  font-size: var(--v-font-size-root);
+}
 
 @import "variables";
 @import "typography";
@@ -12,5 +88,4 @@
 @import "_chip";
 @import "_table";
 @import "_image";
-@import "_layout"
-
+@import "_layout";
