Responsive Login Register UserAccount More 4-5 file

--- a/resources/scss/_typography.scss
+++ b/resources/scss/_typography.scss
@@ -56,3 +56,14 @@ p {
   color: #FFD700;
 
 }
+.text-white {
+  color: #ffffff;
+}
+.text-yellow-500 {
+  color: #ffd700;
+}
+
+.text-dashboard {
+  color: #ffd700;
+  font-size: 15px;
+}
