--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -23,4 +23,4 @@ $banner-success-text: #517d2e;
 $switch-active: #0e54a2;
 $tab-active: #004086;
 $headline-bg: #fb5135;
-$main-bg: #e3e8eb;
+$main-bg: #1D1D1D;
