--- a/resources/scss/_card.scss
+++ b/resources/scss/_card.scss
@@ -45,3 +45,23 @@
   width: 100px;
   height: 100px;
 }
+.card-status {
+  width: 100%;
+  height: 114px;
+  background-color: $main-bg;
+  border-radius: 24px;
+}
+
+.information-cards {
+  padding: 15px !important;
+  border-radius: 24px !important;
+  background-color: #27272a !important;
+  color: #ffffff !important;
+}
+.card-status-crypto{
+border-radius: 24px !important;
+padding: 16px !important;
+background-color: $main-bg !important;
+color: $white !important;
+font-size: 18px !important;
+}
