แก้ไข form แก้ไขข้อมูล form ได้ กำลังสร้างหน้า ซื้อ package ea

--- a/resources/scss/_card.scss
+++ b/resources/scss/_card.scss
@@ -65,3 +65,10 @@ background-color: $main-bg !important;
 color: $white !important;
 font-size: 18px !important;
 }
+.card-package-ea{
+  border-top-left-radius: 1rem !important; /* 24px */
+  border-top-right-radius: 1rem !important; /* 24px */
+  background-color: $main-bg !important;
+  color: $white !important;
+  font-size: 18px !important;
+}
