--- a/resources/scss/_button.scss
+++ b/resources/scss/_button.scss
@@ -197,5 +197,7 @@ border-radius: 24px;
   background-color: #ffd700 !important;
   border-radius: 30px !important;
   width: 15% !important;
-
+}
+.btn-shopping{
+background-color: $placeholder;
 }
