--- a/resources/scss/_card.scss
+++ b/resources/scss/_card.scss
@@ -72,3 +72,10 @@ font-size: 18px !important;
   color: $white !important;
   font-size: 18px !important;
 }
+
+.card-package-details{
+  background-color: $main !important;
+}
+.v-list-package{
+  background-color: $headline-bg !important;
+}
