--- a/resources/scss/_background.scss
+++ b/resources/scss/_background.scss
@@ -5,7 +5,7 @@
   background-color: #ffd700;
 }
 .main-content-dashboard {
-  background-color: #252525;
+  background-color: #252525 !important;
 }
 
 .content-dashboard {
