--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -12,7 +12,7 @@ $danger: #ff3e22;
 $muted: #707070;
 
 $text-base: #707070;
-$placeholder: #b5b5b5;
+$placeholder: #8C8C8C;
 $headline: #004086;
 $white: #ffffff;
 
@@ -22,5 +22,7 @@ $banner-success-text: #517d2e;
 
 $switch-active: #0e54a2;
 $tab-active: #004086;
-$headline-bg: #fb5135;
+$headline-bg: #303030;
 $main-bg: #1D1D1D;
+$main: #252525
+
