update เชื่อม api หลังบ้าน ซื้อpackage

--- a/resources/scss/_button.scss
+++ b/resources/scss/_button.scss
@@ -199,5 +199,6 @@ border-radius: 24px;
   width: 15% !important;
 }
 .btn-shopping{
-background-color: $placeholder;
+background-color: $placeholder !important;
+color: $white !important;
 }
