--- a/resources/scss/_background.scss
+++ b/resources/scss/_background.scss
@@ -16,7 +16,7 @@
   border-radius: 24px;
 }
 .main-content {
-  background-color: #1d1d1d !important;
-  border-radius: 16px !important;
+  background-color: #303030 !important;
+  border-radius: 24px !important;
   padding: 15px !important;
 }
