--- a/resources/scss/_input.scss
+++ b/resources/scss/_input.scss
@@ -104,11 +104,15 @@ select {
   // width: 25%;
   padding: 2px;
   background-color: #252525;
-  border: 1px solid #737373;
+  border: 1px solid $text-base;
   --tw-ring-color: transparent;
 }
 
-.search-package input{
+.search-package {
   --tw-ring-color: transparent !important;
-  background-color: $main-bg;
+  background-color: $main !important;
+  color: $text-base !important;
+  border-radius: 24px;
+  border: 1px solid $text-base;
+  outline: 2px solid transparent !important;
   }
