--- a/resources/scss/_silde-swiper.scss
+++ b/resources/scss/_silde-swiper.scss
@@ -1,62 +1,28 @@
-#app {
-  height: 100%;
-}
-html,
-body {
-  position: relative;
-  height: 10% !important;
-}
-
-body {
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
-  margin: 0;
-  padding: 0;
-}
-
-
-
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-
-  /* Center slide text vertically */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.swiper-slide img {
-  display: block;
+.mySwiper {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  padding: 20px;
 }
 
-
-.append-buttons {
-  text-align: center;
-  margin-top: 20px;
+.img-swiper img {
+  width: 100%; /* กำหนดขนาดรูปภาพ */
+  height: 100%; /* กำหนดขนาดรูปภาพ */
+  border-radius: 10px; /* ปรับขอบมน */
 }
 
-.append-buttons button {
-  display: inline-block;
-  cursor: pointer;
-  border: 1px solid #007aff;
-  color: #007aff;
-  text-decoration: none;
-  padding: 4px 10px;
-  border-radius: 4px;
-  margin: 0 10px;
-  font-size: 13px;
+.swiper-button-next,
+.swiper-button-prev {
+  color: white !important; /* สีของปุ่มนำทาง */
+  background-color: none; /* สีพื้นหลังปุ่ม */
+  border-radius: 30%; /* ปรับปุ่มให้เป็นวงกลม */
+  width: 70px !important;
+  height: 57px !important;
 }
-.mySwiper{
-  height: 10% !important;
+.swiper-pagination {
+  display: none; // ซ่อน pagination ทั้งหมด
 }
-.img-swiper{
-  width: 100% !important;
-  height: 50% !important;
+.swiper-pagination-fraction {
+  display: none; // ซ่อน pagination แบบ fraction
+}
+.swiper-pagination-horizontal {
+  display: none; // ซ่อน pagination แนวนอน
 }
