--- a/resources/scss/_card.scss
+++ b/resources/scss/_card.scss
@@ -131,3 +131,9 @@ font-size: 18px !important;
 .card-bank-peyment{
   background-color: $main !important;
 }
+.payment-card-list{
+  background-color: $main !important;
+}
+.content-bank{
+  width: 100%;
+}
