--- a/resources/scss/_image.scss
+++ b/resources/scss/_image.scss
@@ -6,3 +6,9 @@
 .img-footer{
   width: 10%;
   }
+.img-bank-peyment{
+  width: 60% !important;
+  height: 60% !important;
+  border-radius: 16px !important;
+
+}
