--- a/resources/scss/_input.scss
+++ b/resources/scss/_input.scss
@@ -116,3 +116,8 @@ select {
   border: 1px solid $text-base;
   outline: 2px solid transparent !important;
   }
+
+
+.img-fluid {
+  height: auto !important;
+}
