--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -7,7 +7,7 @@ $color-secondary: #27272a;
 $primary: #3d90d1;
 $info: #2c2c2c;
 $success: #6b904d;
-$warning: #ffab3b;
+$warning: #FF9900;
 $danger: #ff3e22;
 $muted: #707070;
 
@@ -24,5 +24,6 @@ $switch-active: #0e54a2;
 $tab-active: #004086;
 $headline-bg: #303030;
 $main-bg: #1D1D1D;
-$main: #252525
+$main: #252525 ;
 
+$main-text-peyment: #818181;
