--- a/resources/scss/_table.scss
+++ b/resources/scss/_table.scss
@@ -239,6 +239,7 @@
 .main-table-hp{
   background: #2c2c2c !important;
   color: white !important;
-
-
 }
+.form-peyment input{
+  --tw-ring-color: transparent !important;
+  }
