--- a/resources/scss/_image.scss
+++ b/resources/scss/_image.scss
@@ -7,8 +7,12 @@
   width: 10%;
   }
 .img-bank-peyment{
-  width: 60% !important;
-  height: 60% !important;
+  width: 5rem !important;
+  height: 5rem !important;
   border-radius: 16px !important;
 
+}
+.icon-qr-code{
+  width: 209px;
+  height: 209px;
 }
