--- a/resources/scss/_table.scss
+++ b/resources/scss/_table.scss
@@ -243,3 +243,7 @@
 .form-peyment input{
   --tw-ring-color: transparent !important;
   }
+//  .form-peyment .v-label .v-field-label{
+//   --tw-ring-color: transparent !important;
+
+//  }
