--- a/resources/scss/_typography.scss
+++ b/resources/scss/_typography.scss
@@ -73,3 +73,10 @@ p {
 .main-text-peyment{
   color: $main-text-peyment !important;
 }
+.text-black-route{
+  color: $black !important;
+}
+
+.text-white-route{
+  color: $white !important;
+}
