--- a/resources/scss/_background.scss
+++ b/resources/scss/_background.scss
@@ -55,3 +55,10 @@
 .main-content-admin-dashboard {
   background-color: #252525 !important;
 }
+.img-background-gogold{
+  width: 100% !important;
+}
+.headline-container {
+  font-size: 24px;
+  color: $black; /* สีข้อความเริ่มต้น */
+}
