--- a/resources/scss/_card.scss
+++ b/resources/scss/_card.scss
@@ -162,3 +162,17 @@ font-size: 18px !important;
   }
 
 }
+.card-login {
+  background: rgba(0, 0, 0, 0.70);
+  width: 100%;
+  padding: 25px;
+  height: 663px;
+
+}
+.register-main{
+  background: rgba(0, 0, 0, 0.70);
+  width: 100%;
+  padding: 25px;
+  height: 663px;
+
+}
