--- a/resources/scss/_color.scss
+++ b/resources/scss/_color.scss
@@ -23,7 +23,7 @@
   color: $white;
 }
 .mobile-drawer {
-  background: $color-secondary !important;
+  background: $black !important;
   color: $white;
 }
 .text-v-list-item-homepage{
@@ -34,6 +34,6 @@
 
 }
 .toolbar-content{
-  background: $color-secondary!important;
+  background: $black!important;
 
 }
