--- a/resources/scss/_image.scss
+++ b/resources/scss/_image.scss
@@ -19,3 +19,16 @@
 .img-ea-package-details{
   width: 100% !important;
 }
+
+.overlay-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  opacity: 1; /* ปรับค่าความโปร่งใส */
+}
+.image-container {
+  position: relative;
+  width: 100%;
+  height:100%;
+}
