Homepage Desktop-Home

--- a/resources/scss/_image.scss
+++ b/resources/scss/_image.scss
@@ -19,7 +19,10 @@
 .img-ea-package-details{
   width: 100% !important;
 }
-
+// .img-homepage{
+//   width: 1920px;
+//   height: 1080px;
+// }
 .overlay-image {
   position: absolute;
   top: 0;
