--- a/resources/scss/_button.scss
+++ b/resources/scss/_button.scss
@@ -273,11 +273,12 @@ color: $white !important;
   cursor: pointer;
 }
 .guide-trade-button {
-  margin-top: 20px;
-  padding: 10px 20px;
-  background-color: black; /* พื้นหลังสีดำ */
-  border: 1px solid #f1c40f; /* ขอบสีเหลือง */
-  color: #f1c40f; /* สีตัวอักษรเป็นสีเหลือง */
-  border-radius: 5px;
-  cursor: pointer;
+  width: 160px;
+  height: 30px;
+  background-color: $black; /* พื้นหลังสีดำ */
+  border: 1px solid  #FFD700;
+  color: #CAD1E9; /* สีตัวอักษรเป็นสีเหลือง */
+  font-size: 16px;
+  box-shadow: 0px 0px 12px 0px rgba(255, 255, 255, 0.20) inset, 0px 4px 50px 0px rgba(255, 215, 0, 0.40);
+  border-radius: 38px;
 }
